--- a/CSS/textstyles.css
+++ b/CSS/textstyles.css
@@ -96,6 +96,7 @@ h3 {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 0.889rem;
+    text-align: left;
 }
 
 .footer__text--small--opacity {
@@ -103,6 +104,7 @@ h3 {
     font-weight: 300;
     font-size: 0.889rem;
     opacity: 50%;
+    text-align: left;
 }
 
 @media screen and (min-width: 500px) {
@@ -117,6 +119,7 @@ h3 {
     font-size: 0.889rem;
     text-decoration-line: underline;
     opacity: 50%;
+    text-align: left;
 }
 
 .footer__text--small--opacity {
